Fixed bug with images that were not aligning in elementor.

--- a/assets/less/globals.less
+++ b/assets/less/globals.less
@@ -54,7 +54,7 @@ body:after {
 /* Image Styling
 ----------------------*/
 img {
-    display: block;
+    display: inline-block;
     height: auto;
     max-width: 100%;
     &.alignright {
